feat(authentication: Authentication endpoints finished
